fixed div overflow

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
     margin-top: 10px;
     display: flex;
     flex-direction:row;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
     padding-bottom: 30px;
@@ -109,16 +110,18 @@ body {
   }
 
 
-.weather-forecast{
-  display: flex;
-  justify-content: space-around;
-  border-radius: 6px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  margin-top: 10px;
-  padding: 40px;
-}
+  .weather-forecast {
+    display: flex;
+    justify-content: space-around;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    margin-top: 10px;
+    padding: 40px;
+    flex-wrap: wrap; 
+  }
+  
 
-.forecast-days{
+.forecast-days {
   display: block;
   text-align: center;
   justify-content: center;
@@ -128,6 +131,8 @@ body {
   color: #0f2a1d;
   border-radius: 6px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 10px; /* Add some spacing around the forecast items */
+  width: 180px; /* Ensure that forecast items have a max width */
 }
 
 .forecast-icon{
